Fix responsive layout issues

--- a/Prayer-Times/src/App.css
+++ b/Prayer-Times/src/App.css
@@ -10,9 +10,6 @@ body {
 
 html,
 body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
   font-family: "Cairo", sans-serif;
 }
 
